--- a/portfolio-app/src/Public/styles/styles.scss
+++ b/portfolio-app/src/Public/styles/styles.scss
@@ -1,5 +1,7 @@
+//FONTS
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Truculenta&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
 //PAGES
 @import './pages/Contact';
@@ -23,6 +25,4 @@
 html {
     scroll-behavior: smooth;
     background-color:#b1f1fc;
-// /* Created with https://www.css-gradient.com *//* Created with https://www.css-gradient.com */
-//background-color: black;
   }
