--- a/portfolio-app/src/Public/styles/pages/_Contact.scss
+++ b/portfolio-app/src/Public/styles/pages/_Contact.scss
@@ -1,10 +1,9 @@
 .contact{
     height:100vh;
-
-    //background-color: rgba(173, 216, 230, 0.63);
     font-family: 'Truculenta', sans-serif;
     width:100%;
-    .contact-content{      display: flex;
+    .contact-content{      
+        display: flex;
         flex-wrap:wrap;
         h1{
             margin-top:5%;
