--- a/portfolio-app/src/Public/styles/components/_Burger.scss
+++ b/portfolio-app/src/Public/styles/components/_Burger.scss
@@ -3,7 +3,8 @@
     display: none;
     background-color: black;
     width:100%;
-    height:100%;
+   // height:100%;
+   
     position:relative;
     .burger-btn{
         background-color: black;
@@ -16,12 +17,13 @@
         border-radius: 20%;
     }
     .burger-nav{
+        height:18vh;
         background: black;
         position:absolute;
         z-index:9;
         top:10;
         width:100%;
-        height:18vh;
+        //height:100%;
         padding-top:5px;
         padding-bottom:10px;
         padding-left:2%;
