--- a/portfolio-app/src/Public/styles/components/_Banner.scss
+++ b/portfolio-app/src/Public/styles/components/_Banner.scss
@@ -1,25 +1,31 @@
 .banner{
-    font-family: 'Black Han Sans', sans-serif;
+    font-family: 'Titan One', sans-serif;
+    font-family:'Black Han Sans';
     height:100vh;
     background-color: black;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: #28ff1536 0px 20px 70px -10px;
+    z-index:9;
+    position:sticky;
     h1{
         background-color: black;
         font-size:80px;
         display:flex;
         justify-content: center;
         align-items: center;            
-        text-shadow: 15px -9px 0 white;
-        background: linear-gradient(60deg, #0d33ad, #62f0e4);
+        text-shadow: 7px -6px 0 rgb(227, 233, 226);
+        //background: linear-gradient(60deg, #0d33ad, #62f0e4);
+        background: linear-gradient(60deg, #082401, #29ff15);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         padding-top:10%;
         height:20%;
+        font-style:italic;
         width:100%;
+        padding-top:50px;
     }
     h2{
         background-color: white;
-        font-size:50px;
+        font-size:40px;
         display:flex;
         justify-content: center;
         align-items: center;            
@@ -27,8 +33,8 @@
         -webkit-text-fill-color: transparent;
         height:10%;
         width:100%;
-        font-family: 'Shadows Into Light';
-        font-style: italic;
+        font-family: 'VT323';
+        font-style:italic;
     }
     span{
         display:none;
@@ -44,7 +50,7 @@
             font-size:65px;
         }
         h2{
-            font-size:45px;
+            font-size:24px;
         }
     }
 }
@@ -54,7 +60,7 @@
             font-size:50px;
         }
         h2{
-            font-size:40px;
+            font-size:22px;
         }
     }
 }
@@ -64,7 +70,7 @@
             font-size:42px;
         }
         h2{
-            font-size:35px;
+            font-size:20px;
         }
     }
 }
