--- a/portfolio-app/src/Public/styles/components/_BackToTop.scss
+++ b/portfolio-app/src/Public/styles/components/_BackToTop.scss
@@ -6,14 +6,14 @@
   height: 40px;
   animation: bounce 2s ease-in-out infinite ;
   margin:5px;
-  
+
 }
 
 .arrow-line {
   left: 15px;
   position:absolute;
   width: 20px;
-  border: 2.5px solid black;
+  border: 2.5px solid #29ff15;
   border-radius: 15px;
   transform: rotate(45deg);
 }
@@ -21,7 +21,7 @@
 .arrow-line2{
   position:absolute;
   width: 20px;
-  border: 2.5px solid black;
+  border: 2.5px solid #29ff15;
   border-radius: 15px;
   transform: rotate(-45deg);
 }
@@ -31,6 +31,3 @@
     50%  {bottom: 5px;}
     100% {bottom: -20px;}
 }
-
-
-
