--- a/portfolio-app/src/Public/styles/components/_Footer.scss
+++ b/portfolio-app/src/Public/styles/components/_Footer.scss
@@ -1,16 +1,17 @@
 footer{
-    border-top:1px solid white;
+    position:sticky;
+    z-index:9;
     display:flex;
     justify-content: center;
     align-items: center;
     background-color: black;
     height:200px;
     width:100%;
-    font-family: 'Truculenta';
+    font-family: 'Space Mono';
     margin-top:10%;
     h1{
 
-        font-size:30px;
+        font-size:20px;
         color:white;   
       
     }
@@ -31,23 +32,22 @@ footer{
     .links{
         display:flex;
         flex-wrap:wrap;
-        font-family: 'Truculenta';
         position: absolute;
         width:2%;
         left:20px;
         h1{
-            border-bottom:1px solid white;
-            font-size:20px;
+            border-bottom:1px solid #29ff15;
+            font-size:18px;
             margin-bottom:10px;
         }
         a{
-            font-size:18px;
+            font-size:16px;
             text-decoration: none;
             color:white;
 
         }
         a:hover{
-            color:#62f0e4;
+            color:#29ff15;
         }
     }
     
@@ -56,7 +56,7 @@ footer{
 @media(max-width:650px){
     footer{
        h1{
-        font-size:20px;
+        font-size:16px;
     
 
        }     
@@ -70,23 +70,22 @@ footer{
          }
      }
      }
+     .links{
+        h1{
+            font-size:14px;
+        }
+        a{
+            font-size:12px;
+        }
+    }
     }
 }
 
 @media(max-width:350px){
     footer{
         h1{
-            font-size:16px;
-            margin-right:5%;
+            margin-right:10%;
+            font-size:12px;
         }
-        .links{
-            h1{
-                font-size:18px;
-            }
-            a{
-                font-size:14px;
-            }
-        }
-        
     }
 }
