--- a/portfolio-app/src/Public/styles/components/_ProjectCard.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectCard.scss
@@ -1,17 +1,16 @@
 .home-content{
     height:100%;
-    font-family: 'Truculenta', cursive;
+    font-family: 'Space Mono', cursive;
     width:100%;
     flex-wrap:wrap;
     padding-top:5%;
     margin-top:30px;
  
     .card{
-
         display:flex;
         justify-content: center;
         align-items: center;
-        width:75%;
+        width:80%;
         flex-basis:100%;
         height:70vh;
         margin:auto;
@@ -30,22 +29,24 @@
             padding:2rem;
             color: white;
             background-color:white;
+            background-color: rgb(15,15,15);
+            
             article{
-                border-bottom: 1px solid rgb(15,15,15);
+                border-bottom: 1px solid #29ff15;
                 padding-bottom: 2px;
                 h2{
                     padding-left:5px;
-                    color:white;
                     margin:auto;
                     margin-bottom:10px;
-                   background-color: rgb(15,15,15);
+                   background-color: #29ff15;
+                   color:black;
                     width:100%;
-                    font-size:35px;
+                    font-size:26px;
                 }
                 p{
                     text-align: center;
-                    font-size:20px;
-                    color:black;
+                    font-size:16px;
+                    color: #29ff15;
                 }
                 
             }
@@ -59,15 +60,19 @@
                     color:white;
                     margin:auto;
                     width:100%;
-                    font-size:26px;
+                    font-size:20px;
                     color:black;
+                    
+                    color: #29ff15;
                 }
                 ul{
                     color:black;
                     
+                    color: #29ff15;
+                    
                     li{
                        
-                        font-size:20px;
+                        font-size:15px;
                         list-style-type: style auto;
                     }
                 }
@@ -117,7 +122,7 @@
             .card-front{
                 article{
                     p{
-                        font-size:16px;
+                        font-size:15px;
                     }
                 }.tools-used{
          
@@ -130,7 +135,7 @@
                         
                         li{
                            
-                            font-size:15px;
+                            font-size:14px;
                   
                         }
                     }
@@ -142,13 +147,20 @@
         }
     }
 }
+@media(max-width:960px){
+    .home-content{
+        .card{
+            width:85%;
+        }
+    }
+}
 @media(max-width:800px){
         .home-content{
             .card{
                 .card-front{
                     article{
                         h2{
-                            font-size:20px;
+                            font-size:18px;
                         }
                         p
                         {
@@ -163,7 +175,7 @@
                         }
                         ul{
                             li{
-                                font-size: 14px;;
+                                font-size: 13px;
                             }
                         }
 
@@ -213,7 +225,7 @@
                         font-size:18px;
                     }
                     p{
-                        font-size:12px;
+                        font-size:11px;
                     }
                 }
                 .tools-used{
@@ -223,7 +235,7 @@
                     }
                     ul{
                         li{
-                            font-size: 11px;
+                            font-size: 10px;
                         }
                     }
 
@@ -271,7 +283,7 @@
                 article{
                     h2{
                        
-                        font-size:16px;
+                        font-size:15px;
                     }
                     p{
                         font-size: 9px;
